<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello World, Cmov1_doctorActivity!</string>
    <string name="app_name">Cmov1_doctor</string>
    <string name="next_appointment">Next Appointments</string>
    <string name="plannerTitle">Planner</string>
    <string name="plannerStartDateLabel">Start Date:</string>
    <string name="weekdays_prompt">Choose the Weekday</string>
    <string name="hours_prompt">Choose an hour</string>
    <string name="plannerToLabel">to</string>
    <string name="plannerLabel">Schedule Plan:</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="createSchedule">Create Schedule</string>
    <string-array name="weekdays_array">
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
        <item>Sunday</item>
    </string-array>
    <string-array name="hours_array">
        <item>00:00</item>
        <item>00:30</item>
        <item>01:00</item>
        <item>01:30</item>
        <item>02:00</item>
        <item>02:30</item>
        <item>03:00</item>
        <item>03:30</item>
        <item>04:00</item>
        <item>04:30</item>
        <item>05:00</item>
        <item>05:30</item>
        <item>06:00</item>
        <item>06:30</item>
        <item>07:00</item>
        <item>07:30</item>
        <item>08:00</item>
        <item>08:30</item>
        <item>09:00</item>
        <item>09:30</item>
        <item>10:00</item>
        <item>10:30</item>
        <item>11:00</item>
        <item>11:30</item>
        <item>12:00</item>
        <item>12:30</item>
        <item>13:00</item>
        <item>13:30</item>
        <item>14:00</item>
        <item>14:30</item>
        <item>15:00</item>
        <item>15:30</item>
        <item>16:00</item>
        <item>16:30</item>
        <item>17:00</item>
        <item>17:30</item>
        <item>18:00</item>
        <item>18:30</item>
        <item>19:00</item>
        <item>19:30</item>
        <item>20:00</item>
        <item>20:30</item>
        <item>21:00</item>
        <item>21:30</item>
        <item>22:00</item>
        <item>22:30</item>
        <item>23:00</item>
        <item>23:30</item>
    </string-array>
</resources>
