<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:layout_width="match_parent"
  android:layout_height="match_parent">
   	<TextView android:id="@+id/plannerTitle" 
		android:layout_width="fill_parent"
       	android:layout_height="wrap_content"
       	android:text="@string/plannerTitle" 
       	android:gravity="center_horizontal"
       	android:textSize="30dp">
    </TextView>
     	<LinearLayout android:id="@+id/buttons" 
  		android:orientation="horizontal"
	  	android:layout_width="fill_parent"
	  	android:layout_height="wrap_content"
	  	android:gravity="right"
	  	android:paddingTop="20dp">
	  	
	  <Button android:id="@+id/cancelButton" 
	    	android:layout_width="wrap_content"
	       	android:layout_height="wrap_content"
	       	android:text="@string/cancel"
	       	/>
      <Button android:id="@+id/confirmButton" 
    	  android:layout_width="wrap_content"
       	  android:layout_height="wrap_content"
       	  android:text="@string/confirm"
       	  />
  	</LinearLayout>
    <LinearLayout 
    	android:orientation="horizontal"
	  	android:layout_width="match_parent"
	  	android:layout_height="wrap_content"
	  	android:paddingTop="20dp">
	  	<TextView android:id="@+id/dateLabel" 
			android:layout_width="wrap_content"
	       	android:layout_height="fill_parent"
	       	android:text="@string/plannerStartDateLabel"
	       	android:textSize="16dp"
	       	android:gravity="center_vertical"
	       	android:paddingRight="10dp"/>
	    <Button android:id="@+id/datePickerButton" 
	    	android:layout_width="fill_parent"
	       	android:layout_height="wrap_content"
	       	android:gravity="right"
	       	/>
  	</LinearLayout>
  	<LinearLayout 
    	android:orientation="horizontal"
	  	android:layout_width="match_parent"
	  	android:layout_height="wrap_content"
	  	android:paddingTop="10dp"
	  	android:paddingBottom="10dp">
	  	<TextView android:id="@+id/dateLabel" 
			android:layout_width="wrap_content"
	       	android:layout_height="fill_parent"
	       	android:text="@string/plannerLabel"
	       	android:textSize="16dp"
	       	android:gravity="center_vertical"
	       	/>
  	</LinearLayout>
  	<ScrollView 
  		android:orientation="vertical"
	  	android:layout_width="fill_parent"
	  	android:layout_height="wrap_content">
	  	<LinearLayout android:id="@+id/plannerRows" 
	  		android:orientation="vertical"
		  	android:layout_width="fill_parent"
		  	android:layout_height="wrap_content">
		 </LinearLayout>
	  
  	</ScrollView>
</LinearLayout>
